# differential-privacy-toolkit

./: .buildinfo  .gitignore  README.md  code_structure  data_sanitiser.py  generalisation.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  sanitisation.py  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yml  test_release.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/cdpg_anonkit/: index.rst.txt
_sources/autoapi/cdpg_anonkit/generalisation/: index.rst.txt
_sources/autoapi/cdpg_anonkit/sanitisation/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/cdpg_anonkit/: index.html
autoapi/cdpg_anonkit/generalisation/: index.html
autoapi/cdpg_anonkit/sanitisation/: index.html
autoapi/sanitisation/: index.html
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/generalisation/: index.doctree
docs/_build/doctrees/autoapi/sanitisation/: index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/generalisation/: index.rst.txt
docs/_build/html/_sources/autoapi/sanitisation/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/generalisation/: index.html
docs/_build/html/autoapi/sanitisation/: index.html
modules/: generalisation.py
src/cdpg_anonkit/: __init__.py  generalisation.py  sanitisation.py
tests/: categorical_generalisation_test.py  data_sanitiser_test.py  generalisation_test.py  spatial_generalisation_test.py  temporal_generalisation_test.py
