[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdpg-anonkit"
version = "0.1.1"
description = "A toolkit for anonymisation of data"
requires-python = ">=3.10.12"
dependencies = [
    h3>=4.1.2
    numpy>=2.1.2
    pandas>=2.2.3
    pytest>=8.3.3
    python-dateutil>=2.9.0.post0
    typing_extensions>=4.12.2
    ]