[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdpg-anonkit"
version = "0.1.2.1"
description = "A toolkit for anonymisation of data"
readme = "README.md"
authors = [{ name = "Novoneel Chakraborty", email = "novoneel.chakraborty@datakaveri.org" }]
license = {text = "Apache-2.0"}
classifiers = [    
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10.12"
dependencies = [
    "h3 >=4.1.2",
    "numpy >=2.1.2",
    "pandas >=2.2.3",
    "pytest >=8.3.3",
    "python-dateutil >=2.9.0",
    "typing_extensions >=4.12.2"
]
[project.urls]
Homepage = "https://novoneel-iudx.github.io/differential-privacy-toolkit/index.htmlt"
Repository = "https://github.com/novoneel-iudx/differential-privacy-toolkit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[options.optional-dependencies]
dev = [
    "pytest>=7.0"
]