[metadata]
name = cdpg-anonkit
version = 0.1.1
author = Novoneel Chakraborty
author_email = novoneel.chakraborty@datakaveri.org
description = A toolkit for anonymisation of data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/novoneel-iudx/differential-privacy-toolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.12
install_required =
    h3>=4.1.2
    numpy>=2.1.2
    pandas>=2.2.3
    pytest>=8.3.3
    python-dateutil>=2.9.0.post0
    typing_extensions>=4.12.2

[options.packages.find]
where = src